Big update. Refactoring. Use classes for html input formatting. Updated guess submission. Guess matches enough runs some character substitution/special acceptance to handle and/&/+ differentiation as well as to accept anything in place for a special character. Song, artist, and album guesses use it. clean_album_name covers some basic expansion album cases. FLICKERING issue from multiple update_track calls has been IMPROVED. I believe it was 3 flickers, and I think its down to 2 wich is less annoying. This was improved by making some changes to the timer. I was missing some braces for the schedule update function, and had some bad console logs. Instead of creating a new timer on every schedule_update, I try to call back to the same timer, and reset the total time. Todo updated.

--- a/play.css
+++ b/play.css
@@ -34,18 +34,22 @@ table {
     table-layout: auto;
 }
 
-th {
-    font-size: 20px;
+.guess_label {
     font-weight: bold;
 }
-
-input[type=text] {
+.guess {
+    font-size: 20px;
+    /*font-weight: bold;*/
     height: 30px;
     width: 95%;
     background-color: honeydew;
     color: black;
     font-size: 20px;
     padding: 5px;
+}
+
+input[type=text] {
+
 }
 input[type=text]:focus {
     background-color: lightcyan;
